      changed or closed (Patch from Robert Hogan.) [Bugfix on
      0.2.0.2-alpha]

  o Minor bugfixes (controller):
    - Provide DNS expiry times in GMT, not in local time. For backward
      compatibility, ADDRMAP events only provide GMT expiry in an extended
      field. "GETINFO address-mappings" always does the right thing.
    - Use CRLF line endings properly in NS events.

  o Minor bugfixes (misc):
    - Choose perfectly fairly among routers when choosing by bandwidth and
      weighting by fraction of bandwidth provided by exits. Previously, we
      would choose with only approximate fairness, and correct ourselves
      if we ran off the end of the list. [Bugfix on 0.1.2.x]


Changes in version 0.1.2.15 - 2007-07-17
  o Major bugfixes (compilation):
    - Fix compile on FreeBSD/NetBSD/OpenBSD. Oops.

  o Major bugfixes (crashes):
    - Try even harder not to dereference the first character after
      an mmap(). Reported by lodger.
    - Fix a crash bug in directory authorities when we re-number the
      routerlist while inserting a new router.
    - When the cached-routers file is an even multiple of the page size,
      don't run off the end and crash. (Fixes bug 455; based on idea
      from croup.)
    - Fix eventdns.c behavior on Solaris: It is critical to include
      orconfig.h _before_ sys/types.h, so that we can get the expected
      definition of _FILE_OFFSET_BITS.

  o Major bugfixes (security):
    - Fix a possible buffer overrun when using BSD natd support. Bug
      found by croup.
    - When sending destroy cells from a circuit's origin, don't include
      the reason for tearing down the circuit. The spec says we didn't,
      and now we actually don't. Reported by lodger.
    - Keep streamids from different exits on a circuit separate. This
      bug may have allowed other routers on a given circuit to inject
      cells into streams. Reported by lodger; fixes bug 446.